--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,50 @@
 asgiref==3.5.2
 black==22.12.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
 click==8.1.3
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==39.0.2
+defusedxml==0.7.1
 Django==4.1.4
 django-autoslug==1.9.8
 django-countries==7.5
 django-environ==0.9.0
 django-filter==22.1
 django-phonenumber-field==7.0.1
+django-templated-mail==1.1.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
 flake8==6.0.0
+idna==3.4
 isort==5.11.3
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.2
 mccabe==0.7.0
 mypy-extensions==0.4.3
+oauthlib==3.2.2
 pathspec==0.10.3
 phonenumbers==8.13.2
+phonenumberslite==8.13.4
 Pillow==9.3.0
 platformdirs==2.6.0
 psycopg2-binary==2.9.5
 pycodestyle==2.10.0
+pycparser==2.21
 pyflakes==3.0.1
+PyJWT==2.6.0
+python3-openid==3.2.0
 pytz==2022.7
+requests==2.28.2
+requests-oauthlib==1.3.1
+six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.3.0
 sqlparse==0.4.3
 typing_extensions==4.4.0
+uritemplate==4.1.1
+urllib3==1.26.14
